--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
+    "dotenv": "^16.4.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
